--- a/room.html
+++ b/room.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="main_mobile.css">
+    <link rel="stylesheet" href="room.css"
 
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
@@ -51,7 +52,7 @@
     <!-- END HEADER -->
     
     <!-- START BODY -->
-     
+    <img class="room-header-img" src="images/stanza.png">
     <!-- END BODY -->
 
 </body>
