--- a/room.html
+++ b/room.html
@@ -53,6 +53,37 @@
     
     <!-- START BODY -->
     <img class="room-header-img" src="images/stanza.png">
+    <div class="container">
+      <div class="row">
+        <div class="col-5">
+          <h1>Stanza 1</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius dolore consectetur, veniam tenetur dolor similique expedita explicabo quam praesentium a numquam aut nam voluptate possimus quas, debitis tempore veritatis sit.</p>
+
+        </div>
+        <div class="col-7 charateristics">
+          <div class="service-element">
+            <div class="circle"></div>
+            <h6>Servizio</h6>
+            </div>
+            <div class="service-element">
+              <div class="circle"></div>
+              <h6>Servizio</h6>
+              </div>
+              <div class="service-element">
+                <div class="circle"></div>
+                <h6>Servizio</h6>
+                </div>
+                <div class="service-element">
+                  <div class="circle"></div>
+                  <h6>Servizio</h6>
+                  </div>
+                  <div class="service-element">
+                    <div class="circle"></div>
+                    <h6>Servizio</h6>
+                    </div>
+        </div>
+      </div>
+    </div>
     <!-- END BODY -->
 
 </body>
